@@ -171,6 +171,7 @@ public:
    QToolButton *cdUpButton;
    QToolButton *cdOtherButton;
 	QToolButton *popupBtn;
+	QToolButton *clearOrigin;
 	PanelPopup *popup;
    KrBookmarkButton *bookmarksButton;
    DirHistoryQueue* dirHistoryQueue;
