@@ -1,4 +1,5 @@
 ======================
+    ADDED: clear-location-bar button a-la konqueror (configurable)
     ADDED: permissions column as octal numbers
     ADDED: right-click menu now has a "create new..." submenu
     --architecture-- right-click menu code moved to a new class KrPopupMenu
